<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_searchScreen_top"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@integer/margin_searchScreen_container">

    <LinearLayout
        android:id="@+id/layout_searchScreen_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_searchScreen_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@integer/textSize_searchScreen_normal"
            android:text="@string/text_from" />

        <com.example.youyou.arrivaltimer.MyTextView
            android:id="@+id/editText_searchScreen_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@integer/textSize_searchScreen_normal"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@color/textColor_gray"
            android:text="@string/editText_init_from"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_searchScreen_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_searchScreen_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@integer/textSize_searchScreen_normal"
            android:layout_gravity="center_vertical|center_horizontal"
            android:rotation="@integer/rotation_90"
            android:text="@string/text_interval" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_searchScreen_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_searchScreen_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@integer/textSize_searchScreen_normal"
            android:text="@string/text_to" />

        <com.example.youyou.arrivaltimer.MyTextView
            android:id="@+id/editText_searchScreen_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@integer/textSize_searchScreen_normal"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@color/textColor_gray"
            android:text="@string/editText_init_to"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_searchScreen_transportation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/radioGroup_searchScreen_transportation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_searchScreen_transportation_walk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transportation_walk" />

            <RadioButton
                android:id="@+id/radioButton_searchScreen_transportation_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transportation_car" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_searchScreen_searchTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_searchScreen_searchTime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_departureTime_title" />

        <TextView
            android:id="@+id/textView_searchScreen_searchTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
            <!-- @string/text_departureTime_format を使って、現在時刻を設定する -->

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_searchScreen_searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_searchScreen_searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search" />
    </LinearLayout>

</LinearLayout>
